[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/ammo.png" type="Texture" id=1]
[ext_resource path="res://fonts/MotionControl-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/hud.gd" type="Script" id=3]
[ext_resource path="res://art/virus.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.423529, 0.701961, 0.262745, 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Score:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 597, -46 ), Vector2( 597, 14 ), Vector2( 597, 28 ), Vector2( 597, 80 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Score:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.8, 1 )
}

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.43188
margin_right = -1.43188
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -15.0
margin_right = 2.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.03378
margin_top = 4.65204
margin_right = 1.96622
margin_bottom = 14.652

[node name="ColorRect3" type="ColorRect" parent="Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.03464
margin_top = -1.96521
margin_right = -1.03464
margin_bottom = 8.03479
rect_rotation = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.276
margin_top = 2.03592
margin_right = 9.276
margin_bottom = 12.0359
rect_rotation = -90.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 972.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/HBoxContainer2"]
margin_right = 462.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Virus" type="TextureRect" parent="HBoxContainer/HBoxContainer2/HBoxContainer"]
modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
margin_right = 158.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="SickBar" type="ProgressBar" parent="HBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 162.0
margin_right = 462.0
margin_bottom = 120.0
rect_min_size = Vector2( 300, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 7 )
custom_styles/fg = SubResource( 5 )

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/HBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 466.0
margin_right = 506.0
margin_bottom = 120.0
rect_min_size = Vector2( 40, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/HBoxContainer2"]
margin_left = 510.0
margin_right = 972.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Kill_label" type="Label" parent="HBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_top = 35.0
margin_right = 117.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 4 )
text = "Killed: "

[node name="Kill" type="Label" parent="HBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_left = 121.0
margin_top = 35.0
margin_right = 163.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 4 )
text = "10"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 976.0
margin_right = 1176.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 116.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 156.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 1180.0
margin_right = 1280.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 0 )
alignment = 2

[node name="Ammo" type="Label" parent="HBoxContainer/HBoxContainer3"]
margin_left = 1.0
margin_top = 43.0
margin_right = 100.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "100/100"
align = 2
valign = 2

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.0
margin_top = 23.3333
margin_right = 46.0
margin_bottom = 56.3333
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/notif = SubResource( 3 )
[connection signal="value_changed" from="HBoxContainer/HBoxContainer2/HBoxContainer/SickBar" to="." method="_on_SickBar_value_changed"]
